update login, register form, external login, fix upload file UI

--- a/FinanceSystem/FinanceSystem/Content/css/StyleLogin.css
+++ b/FinanceSystem/FinanceSystem/Content/css/StyleLogin.css
@@ -83,8 +83,10 @@ header{
     color: #162938;
 }
 
-.wrapper{
+.wrapper {
     position: relative;
+    top: 20%;
+    left: 30%;
     width: 400px;
     height: 440px;
     background: transparent;
