--- a/FinanceSystem/FinanceSystem/Content/css/base.css
+++ b/FinanceSystem/FinanceSystem/Content/css/base.css
@@ -12149,7 +12149,9 @@ table.v-table tfoot tr td {
     width: 100%
 }
 
-.v-tabs__slider-wrapper {
+.v-tabs__slider-
+
+{
     bottom: 0;
     margin: 0!important;
     position: absolute;
