--- a/FinanceSystem/FinanceSystem/Views/Account/Login.cshtml
+++ b/FinanceSystem/FinanceSystem/Views/Account/Login.cshtml
@@ -14,6 +14,7 @@
     <script src="~/Content/Login/js/script1.js"></script>
     <link rel="stylesheet" href="~/Content/Login/css/style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link href="~/Content/css/StyleLogin.css" rel="stylesheet" />
 </head>
 <body>
     <header style="display: flex;">
@@ -32,67 +33,65 @@
         <span class="icon-close">
             <ion-icon name="close-outline"></ion-icon>
         </span>
-        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-box login", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            <div class="form-box login">
-                <h2>Login</h2>
-                <form action="#">
-                    <div class="input-box">
-                        <span class="icon">
-                            <ion-icon name="mail-outline"></ion-icon>
-                        </span>
-                        <input type="email" name="Email" required>
-                        <label>Email</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="icon">
-                            <ion-icon name="lock-closed-outline"></ion-icon>
-                        </span>
-                        <input type="password" name="Password" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remeber-forgot">
-                        <label>
-                            <input type="checkbox" name="RememberMe">Remember me
-                        </label>
-                        <a href="#">Forgot Password?</a>
-                    </div>
-                    <button type="submit" class="btn">Login</button>
-                    <div class="login-register">
-                        <p>Don't have an account? <a href="#" class="register-link"> Register</a></p>
-                    </div>
-                </form>
+    <div class="form-box login">
+        <h2>Login</h2>
+        <form action="#">
+            <div class="input-box">
+                <span class="icon">
+                    <ion-icon name="mail-outline"></ion-icon>
+                </span>
+                <input type="email" name="Email" required>
+                <label>Email</label>
             </div>
+            <div class="input-box">
+                <span class="icon">
+                    <ion-icon name="lock-closed-outline"></ion-icon>
+                </span>
+                <input type="password" name="Password" required>
+                <label>Password</label>
+            </div>
+            <div class="remeber-forgot">
+                <label>
+                    <input type="checkbox" name="RememberMe">Remember me
+                </label>
+                <a href="@Url.Action("ForgotPassword", "Account")">Forgot Password?</a>
+            </div>
+            <button type="submit" class="btn">Login</button>
+            <div class="login-register">
+                <p>Don't have an account? <a href="#" class="register-link"> Register</a></p>
+            </div>
+        </form>
+        @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+    </div>
         }
             <div class="form-box register">
                 <h2>Registration</h2>
-                <form action="#">
-                    <div class="input-box">
-                        <span class="icon">
-                            <ion-icon name="person"></ion-icon>
-                        </span>
-                        <input type="text" required>
-                        <label>Username</label>
-                    </div>
+                <form action="Register" method="post">
+                    @Html.AntiForgeryToken()
+
                     <div class="input-box">
                         <span class="icon">
                             <ion-icon name="mail"></ion-icon>
                         </span>
-                        <input type="email" required>
+                        <input type="email" required, name="Email">
                         <label>Email</label>
+                    </div>
+                    <div class="input-box">
+                        <span class="icon">
+                            <ion-icon name="person"></ion-icon>
+                        </span>
+                        <input type="password" required, name="Password">
+                        <label>Password</label>
                     </div>
                     <div class="input-box">
                         <span class="icon">
                             <ion-icon name="lock-closed"></ion-icon>
                         </span>
-                        <input type="password" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remeber-forgot">
-                        <label>
-                            <input type="checkbox">I agree to the terms & conditions
-                        </label>
+                        <input type="password" required, name="ConfirmPassword">
+                        <label>Confirm Password</label>
                     </div>
                     <button type="submit" class="btn">Register</button>
                     <div class="login-register">
@@ -100,7 +99,9 @@
                     </div>
                 </form>
             </div>
+        
         </div>
+        
     <script src="~/Content/Login/js/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="http://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
