--- a/FinanceSystem/FinanceSystem/Views/Transactions/Index.cshtml
+++ b/FinanceSystem/FinanceSystem/Views/Transactions/Index.cshtml
@@ -35,10 +35,10 @@
             <div class="filter-menu">
                 <label>Category</label>
                 <select id="categoryFilter">
-                    <option>All Categories</option>
+                    <option value="0">All Categories</option>
                     @foreach (var item in Model.Categories)
                     {
-                        <option>@item.CategoryName</option>
+                        <option value="@item.CategoryID">@item.CategoryName</option>
                     }
                 </select>
                 <label>Status</label>
@@ -68,99 +68,30 @@
         </button>
     </div>
 </div>
-<div class="products-area-wrapper tableView">
-    <div class="products-header">
-        <div></div>
-
-        <div></div>
-        <div></div>
-        <div></div>
-        <div class="product-cell image">
-            Giao dịch
-            <button class="sort-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z" /></svg>
-            </button>
-        </div>
-        <div class="product-cell category">
-            Thể loại<button class="sort-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z" /></svg>
-            </button>
-        </div>
-        <div class="product-cell status-cell">
-            Status<button class="sort-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z" /></svg>
-            </button>
-        </div>
-        <div class="product-cell sales">
-            Ngày<button class="sort-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z" /></svg>
-            </button>
-        </div>
-        <div class="product-cell stock">
-            Ghi chú<button class="sort-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z" /></svg>
-            </button>
-        </div>
-
-    </div>
-    @foreach (var item in Model.Transactions)
-    {
-       
-        <div class="products-row" id="transactionList">
-            <div>
-
-       </div>
-            <button class="cell-more-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1" /><circle cx="12" cy="5" r="1" /><circle cx="12" cy="19" r="1" /></svg>
-            </button>
-            <ul id="options-menu" style="display: none;">
-                <li>Option 1</li>
-                <li>Option 2</li>
-                <li>Option 3</li>
-            </ul>
-            @*<script>
-            var moreButtons = document.querySelectorAll(".cell-more-button");
-            moreButtons.forEach(function (button) {
-                button.addEventListener("click", function () {
-                    var optionsMenu = this.nextElementSibling;
-                    if (optionsMenu.style.display === "none") {
-                        optionsMenu.style.display = "block";
-                    } else {
-                        optionsMenu.style.display = "none";
-                    }
-                });
-            });
-        </script>*@
-            <script>
-                var moreButtons = document.querySelectorAll(".cell-more-button");
-                moreButtons.forEach(function (button) {
-                    button.addEventListener("click", function () {
-                        var optionsMenu = this.nextElementSibling;
-                        if (optionsMenu.style.display === "none") {
-                            optionsMenu.style.display = "block";
-                        } else {
-                            optionsMenu.style.display = "none";
-                        }
-                    });
-                });
-            </script>
-
-            <div class="product-cell image">
-                <img src="@item.Image" alt="@item.Image">
-                <span>$@item.Amount</span>
-            </div>
-            <div class="product-cell category"><span class="cell-label">Category:</span>@item.Category.CategoryName</div>
-            <div class="product-cell status-cell">
-                <span class="cell-label">Status:</span>
-                <span class="status active">Active</span>
-            </div>
-            <div class="product-cell sales"><span class="cell-label">Sales:</span>@item.CreateDate</div>
-            <div class="product-cell stock"><span class="cell-label">Stock:</span>@item.Note</div>
-        </div>
-    }
-
-
-</div>
-<p>Tổng số tiền đã tiêu: @ViewBag.TotalAmount</p>
+@{ @Html.Action("FilterCategory") }
 <script src="~/Content/js/menu.js"></script>
+<script>
+    var moreButtons = document.querySelectorAll(".cell-more-button");
+
+    moreButtons.forEach(function (button) {
+        button.addEventListener("click", function () {
+            var optionsMenu = this.nextElementSibling;
+            if (optionsMenu.style.display === "none") {
+                optionsMenu.style.display = "block";
+            } else {
+                optionsMenu.style.display = "none";
+            }
+        });
+    });
+</script>
+<script>
+    $(document).ready(function () {
+        $('#filterButton').click(function () {
+            var category = $('#categoryFilter').find(":selected").val();
+
+            $('.loadNe').load('@Url.Action("FilterCategory", "Transactions")' + '?cate=' + category);
+
+        });
+    });
+</script>
 
