--- a/FinanceSystem/FinanceSystem/Areas/Admin/Views/UserInformations/Index.cshtml
+++ b/FinanceSystem/FinanceSystem/Areas/Admin/Views/UserInformations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FinanceSystem.Models.UserInformation>
+﻿@model IEnumerable<FinanceSystem.Models.AspNetUser>
 
 @{
     ViewBag.Title = "Index";
@@ -16,15 +16,15 @@
     <div class="space-y-4 mt-3">
         @foreach (var item in Model)
         {
-            <a href="@Url.Action("Details", "UserInformations", new {id = item.UserId})">
+            <a href="@Url.Action("Details", "UserInformations", new {id = item.Id})">
                 <button class="bg-white p-3 w-full flex flex-col rounded-md dark:bg-gray-800 shadow">
                     <div class="flex xl:flex-row flex-col items-center font-medium text-gray-900 dark:text-white pb-2 mb-2 xl:border-b border-gray-200 border-opacity-75 dark:border-gray-700 w-full">
                         @*@if (item.UserInformation != null)
                             {
                                 <img src="@item.UserInformation.Image" class="w-7 h-7 mr-2 rounded-full" alt="profile" />
                             }*@
-                        <img src="@item.Image" class="w-7 h-7 mr-2 rounded-full" alt="profile" />
-                        @item.AspNetUser.UserName
+                        <img src="@*@item.Image*@" class="w-7 h-7 mr-2 rounded-full" alt="profile" />
+                        @item.UserName
                     </div>
                     <div class="flex items-center w-full">
                         <div class="text-xs py-1 px-2 leading-none dark:bg-gray-900 bg-blue-100 text-blue-500 rounded-md">Design</div>
@@ -44,8 +44,8 @@
             <div class="sm:px-7 sm:pt-7 px-4 pt-4 flex flex-col w-full border-b border-gray-200 bg-white dark:bg-gray-900 dark:text-white dark:border-gray-800 sticky top-0">
                 <div class="flex w-full items-center">
                     <div class="flex items-center text-3xl text-gray-900 dark:text-white">
-                        <img src="@item.Image" class="w-12 mr-4 rounded-full" alt="profile" />
-                        <p>@item.FirstName @item.LastName</p>
+                        <img src="@item.UserInformation.Image" class="w-12 mr-4 rounded-full" alt="profile" />
+                        <p>@item.UserInformation.FirstName @item.UserInformation.LastName</p>
                     </div>
                     <div class="ml-auto sm:flex hidden items-center justify-end">
                         <div class="text-right">
