--- a/FinanceSystem/FinanceSystem/Views/Shared/_Layout.cshtml
+++ b/FinanceSystem/FinanceSystem/Views/Shared/_Layout.cshtml
@@ -235,21 +235,21 @@
             </div>
             <ul class="sidebar-list">
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="@Url.Action("Index", "Transactions")">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" /><polyline points="9 22 9 12 15 12 15 22" /></svg>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="sidebar-list-item active">
-                    <a href="#">
+                    <a href="@Url.Action("Index", "Transactions")">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-bag"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z" /><line x1="3" y1="6" x2="21" y2="6" /><path d="M16 10a4 4 0 0 1-8 0" /></svg>
                         <span>Transaction</span>
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="@Url.Action("Index", "Wallets")">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-pie-chart"><path d="M21.21 15.89A10 10 0 1 1 8 2.83" /><path d="M22 12A10 10 0 0 0 12 2v10z" /></svg>
-                        <span>Statistics</span>
+                        <span>Wallet Manager</span>
                     </a>
                 </li>
                 <li class="sidebar-list-item">
@@ -269,7 +269,7 @@
                 <div class="account-info-picture">
                     <img src="https://images.unsplash.com/photo-1527736947477-2790e28f3443?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTE2fHx3b21hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="Account">
                 </div>
-                <div class="account-info-name">@User.Identity.GetUserName() </div>
+                <div class="account-info-name">@TempData["Name"] </div>
                 <div class="dropdown">
                     <button class="account-info-more" style="position: relative; left: 63px;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1" /><circle cx="19" cy="12" r="1" /><circle cx="5" cy="12" r="1" /></svg>
