--- a/FinanceSystem/FinanceSystem/Views/Wallets/Delete.cshtml
+++ b/FinanceSystem/FinanceSystem/Views/Wallets/Delete.cshtml
@@ -1,45 +1,50 @@
 ﻿@model FinanceSystem.Models.Wallet
-
+<link href="~/Content/css/form.css" rel="stylesheet" />
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div style="display:flex">
+    <span class="icon" style="color: aqua; width: 30px; position: relative; transform: scale(1.9); transform-origin: left top  ; right:4px;">
+        <ion-icon name="trash-outline"></ion-icon>
+    </span>
 
-<h2>Delete</h2>
+    <h2 style="color:aqua">Delete  </h2>
 
-<h3>Are you sure you want to delete this?</h3>
+</div>
+
 <div>
-    <h4>Wallet</h4>
+
     <hr />
     <dl class="dl-horizontal">
-        <dt>
+        <dt class="attribute">
             @Html.DisplayNameFor(model => model.AspNetUser.Email)
         </dt>
 
-        <dd>
+        <dd class="attribute-input">
             @Html.DisplayFor(model => model.AspNetUser.Email)
         </dd>
 
-        <dt>
+        <dt class="attribute">
             @Html.DisplayNameFor(model => model.Plan.Description)
         </dt>
-
-        <dd>
+         
+        <dd class="attribute-input">
             @Html.DisplayFor(model => model.Plan.Description)
         </dd>
 
-        <dt>
+        <dt class="attribute">
             @Html.DisplayNameFor(model => model.WalletName)
         </dt>
 
-        <dd>
+        <dd class="attribute-input">
             @Html.DisplayFor(model => model.WalletName)
         </dd>
 
-        <dt>
+        <dt class="attribute">
             @Html.DisplayNameFor(model => model.AccountBalance)
         </dt>
 
-        <dd>
+        <dd class="attribute-input">
             @Html.DisplayFor(model => model.AccountBalance)
         </dd>
 
@@ -49,9 +54,12 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+<div class="form-actions no-color">
+    <input type="submit" value="Delete" class="my-link" /> |
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "my-link" })
+
+</div>
     }
 </div>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="http://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
