--- a/FinanceSystem/FinanceSystem/Areas/Admin/Views/UserInformations/Details.cshtml
+++ b/FinanceSystem/FinanceSystem/Areas/Admin/Views/UserInformations/Details.cshtml
@@ -7,21 +7,23 @@
 
         <div class="flex w-full items-center">
             <div class="flex items-center text-3xl text-gray-900 dark:text-white">
-                <img src="" class="w-12 mr-4 rounded-full" alt="profile" />
+                <img src="@ViewBag.Image" class="w-12 mr-4 rounded-full" alt="profile" />
                 <p></p>
             </div>
             <div class="ml-auto sm:flex hidden items-center justify-end">
                 <div class="text-right">
                     <div class="text-xs text-gray-400 dark:text-gray-400">Account balance:</div>
-                    <div class="text-gray-900 text-lg dark:text-white">$@String.Format(format, "{0:c0}", @ViewBag.Total)</div>
+                    <div class="text-gray-900 text-lg dark:text-white">
+                    $@String.Format(format, "{0:c0}", @ViewBag.Total)</div>
                 </div>
-                <button class="w-8 h-8 ml-4 text-gray-400 shadow dark:text-gray-400 rounded-full flex items-center justify-center border border-gray-200 dark:border-gray-700">
-                    <svg viewBox="0 0 24 24" class="w-4" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="1"></circle>
-                        <circle cx="19" cy="12" r="1"></circle>
-                        <circle cx="5" cy="12" r="1"></circle>
-                    </svg>
-                </button>
+                <a href="@Url.Action("Delete", "UserInformations", new {id = ViewBag.Id})"><button class="w-8 h-8 ml-4 text-gray-400 shadow dark:text-gray-400 rounded-full flex items-center justify-center border border-gray-200 dark:border-gray-700">
+    <svg viewBox="0 0 24 24" class="w-4" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="12" cy="12" r="1"></circle>
+        <circle cx="19" cy="12" r="1"></circle>
+        <circle cx="5" cy="12" r="1"></circle>
+    </svg>
+</button></a>
+                
             </div>
 
         </div>
@@ -129,6 +131,7 @@
                                     <div class="text-gray-400 text-xs">@item.CreateDate.Value.ToShortTimeString()</div>
                                 </div>
                                 <button class="w-8 h-8 inline-flex items-center justify-center text-gray-400 ml-auto">
+
                                     <svg viewBox="0 0 24 24" class="w-5" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                         <circle cx="12" cy="12" r="1"></circle>
                                         <circle cx="19" cy="12" r="1"></circle>
