--- a/FinanceSystem/FinanceSystem/Content/Login/css/style.css
+++ b/FinanceSystem/FinanceSystem/Content/Login/css/style.css
@@ -255,3 +255,8 @@ header{
 .login-register p a:hover{
     text-decoration: underline;
 }
+
+.btn btn-primary{
+    color: midnightblue;
+    text-decoration: none;
+}
