--- a/FinanceSystem/FinanceSystem/Content/css/style.css
+++ b/FinanceSystem/FinanceSystem/Content/css/style.css
@@ -180,6 +180,7 @@ body {
 }
 
 .app-content {
+  overflow:auto;
   padding: 16px;
   background-color: var(--app-bg);
   height: 100%;
@@ -602,4 +603,17 @@ body {
 }
 .gridView .cell-label {
   opacity: 0.6;
+}
+.btn btn-default {
+    background-color: #40b8b7;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
 }
