--- a/FinanceSystem/FinanceSystem/Views/Shared/_Layout.cshtml
+++ b/FinanceSystem/FinanceSystem/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/Content/css/style.css">
     <link rel="stylesheet" href="~/Content/css/styles.css">
     <link href="~/Content/css/menu.css" rel="stylesheet" />
-
+    <link href="~/Content/css/form.css" rel="stylesheet" />
 </head>
 <body>
     <!-- partial:index.partial.html -->
@@ -254,48 +254,72 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="@Url.Action("Report", "Report")">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-inbox"><polyline points="22 12 16 12 14 15 10 15 8 12 2 12" /><path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z" /></svg>
-                        <span>Inbox</span>
+                        <span>Report</span>
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="@Url.Action("ReportCategory", "Report")">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9" /><path d="M13.73 21a2 2 0 0 1-3.46 0" /></svg>
-                        <span>Notifications</span>
+                        <span>Report by categories</span>
                     </a>
                 </li>
             </ul>
             <div class="account-info">
+
                 <div class="account-info-picture">
-                    <img src="https://images.unsplash.com/photo-1527736947477-2790e28f3443?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTE2fHx3b21hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="Account">
-                </div>
-                @{string id = User.Identity.GetUserId();
-                    FinanceSystemDBContext db = new FinanceSystemDBContext();
+                    @{
+                        FinanceSystemDBContext db = new FinanceSystemDBContext();
+                        if (User.Identity.IsAuthenticated == true)
+                        {
+                            string id = User.Identity.GetUserId();
+
+                            var Image = db.UserInformations.FirstOrDefault(x => x.UserId == id).Image;
+                            <img src="@Image" alt="Account">
+                            }
+                        }
+
+                    </div>
+                @{
 
                     if (User.Identity.IsAuthenticated == true)
                     {
+                        string id = User.Identity.GetUserId();
+
                         string name = db.UserInformations.FirstOrDefault(x => x.UserId == id).LastName;
                         <div class="account-info-name">@name </div>
 
                     }
-                    @*<div class="account-info-name">@name </div>*@
+                    else
+                    {
+                        <div class="account-info-name">Guest</div>
+
+                    }
                 }
                 <div class="dropdown">
                     <button class="account-info-more" style="position: relative; left: 63px;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1" /><circle cx="19" cy="12" r="1" /><circle cx="5" cy="12" r="1" /></svg>
                     </button>
-                    <ul class="dropdown-menu" style=" position: relative; top: -119px; margin-bottom: -97px;">
+                    <ul class="dropdown-menu" style="position: relative; top: -143px; margin-bottom: -119px; background-color: rgba(255, 255, 255, 0.001); opacity: 0.9; height: 125px; ">
                         @if (Request.IsAuthenticated)
                         {
+                            string userId = User.Identity.GetUserId();
                             using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "box1" }))
                             {
                                 @Html.AntiForgeryToken()
-                                <button type="submit" class="box1" style="--i:4;">Log Out</button>
+                                <button type="submit" class="btn123" style="width: 136px; --i: 4; position: relative; top: 2px;">Log Out</button>
                             }
+                            using (Html.BeginForm("AccountSetting", "UserInformations", FormMethod.Post, new { id = "logoutForm", @class = "box1" }))
+                            {
+                                @Html.AntiForgeryToken()
+
+
+                                <a href="@Html.ActionLink("AccountSetting", "AccountSetting", "UserInformations", new { id = userId }, htmlAttributes: null)"><button type="submit" class="btn123" style="--i:4;">Account Setting</button></a>
+                            }
+                            @Html.ActionLink("AccountSetting", "AccountSetting", "UserInformations", new { id = userId, @class = "btn123" }, htmlAttributes: null)
                         }
-                        <li><a href="#">Option 2</a></li>
-                        <li><a href="#">Option 3</a></li>
+
                     </ul>
                 </div>
 
@@ -310,7 +334,7 @@
                 </script>
             </div>
         </div>
-        <div class="app-content">
+        <div class="app-content" style="overflow:auto">
             @RenderBody()
         </div>
     </div>
