--- a/FinanceSystem/FinanceSystem/Views/UserInformations/Index.cshtml
+++ b/FinanceSystem/FinanceSystem/Views/UserInformations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<link href="~/Content/css/style.css" rel="stylesheet" />
 <h2>Index</h2>
 
 <p>
