--- a/FinanceSystem/FinanceSystem/Views/Wallets/Create.cshtml
+++ b/FinanceSystem/FinanceSystem/Views/Wallets/Create.cshtml
@@ -1,17 +1,45 @@
 ﻿@model FinanceSystem.Models.Wallet
-
+<link href="~/Content/css/style.css" rel="stylesheet" />
+<link href="~/Content/css/form.css" rel="stylesheet" />
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .form-group {
+        color: #00ffff
+    }
 
-<h2>Create</h2>
+    .btn {
+        position: relative;
+        top: 5px;
+        color: aqua;
+        background-color: #1d283c;
+        border: 2px solid #1d283c;
+        padding: 10px;
+        transition: all 0.3s ease;
+    }
+
+        .btn:hover {
+            color: aqua;
+            border-color: aqua;
+        }
+
+    .my-link {
+        text-decoration: none;
+        position: relative;
+        top: 282px;
+        color: #00ffff;
+        text-decoration: none;
+    }
+</style>
+<h2 style="color: #00ffff">Create</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Wallet</h4>
+        <h4 style="color: #00ffff">Wallet</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -48,12 +76,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "my-link" })
 </div>
